fix arrow rotating when onClick Collapse

--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -58,6 +58,6 @@
     display: block;
 }
 
-.rotate .arrowNav {
+.arrowNav.rotate img {
     transform: rotate(180deg);
 }
